== 3.5 ==

* Fixed warning message which appear for subscriptions without access levels
* Fixed members pagination issue when filter becomes reset after going to the next page
* Fixed coupons start date issue
* Fixed coupons timezones issue
* Fixed multiple levels compatibility issue
* Fixed infinite transition issue for indefinite subscriptions when period set improperly
* Fixed &USD; rendering issue
* Fixed issue which allows deactivated users to have access to a site
* Fixed admin bar issue which appear when global tables are used
* Fixed account page submission issue.
* Fixed login widget redirect issue
* Fixed PayPal Standard Payment gateway transactions date issue
* Fixed PayPal subscription suspended issue due to max fails limit settings
* Fixed category protection issue
* Fixed internal issue with actions collision
* Fixed network wide protection issue when global installation is used
* Fixed database table verification and repairing processes
* Fixed rule counts settings issue
* Fixed [renewform] shortcode styling issue
* Fixed protection issue, when protection is disabled
* Fixed leaving ping issue for expired subscriptions
* Fixed Terms Of Service plugin compatibility
* Fixed deleted ping warnings
* Fixed warning which appears after coupon deletion from admin dashboard
* Fixed free subscription gateway doubling buttons issue
* Fixed members pagination issue
* Fixed issue with not loaded coupon forms
* Fixed communication issue when all subscription is selected
* Fixed user display name and level name issues for ping data
* Fixed protection issue for BuddyPress group creation rule
* Implemented new Authorize.net gateway which changes Authorize ARB and AIM gateways
* Implemented membership access level meta box for posts and pages editing form
* Implemented functionality which hides inactive members from BuddyPress members list
* Implemented ability to upgrade subscription for admin gateway